--- a/chat_server/package.json
+++ b/chat_server/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "socket.io": "1.3.x",
     "express": "3.4.8",
-    "nedb": "1.4.0"
+    "nedb": "1.4.0",
+    "cors": "2.7.1"
   },
   "repository": {
     "type": "git",
