--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -13,34 +13,42 @@ RewriteRule ^contact\.php$ contact.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/contacto\.php$ contact.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/связаться\.php$ contact.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/联系\.php$ contact.php?lang=$1&%{QUERY_STRING} [L,QSA]
+RewriteRule ^((?!en)[a-z]*)/contacte-nos\.php$ contact.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^register\.php$ register.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/registro\.php$ register.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/регистрация\.php$ register.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/注册\.php$ register.php?lang=$1&%{QUERY_STRING} [L,QSA]
+RewriteRule ^((?!en)[a-z]*)/inscrever-se\.php$ register.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^our-security\.php$ our-security.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/nuestra-seguridad\.php$ our-security.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/наша-безопасность\.php$ our-security.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/我们的安全\.php$ our-security.php?lang=$1&%{QUERY_STRING} [L,QSA]
+RewriteRule ^((?!en)[a-z]*)/nossa-seguranca.php\.php$ our-security.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^buy-and-sell-bitcoin\.php$ buy-and-sell-bitcoin.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/comprar-y-vender-bitcoins\.php$ buy-and-sell-bitcoin.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/как-зарегистрироваться\.php$ buy-and-sell-bitcoin.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/注册\.php$ buy-and-sell-bitcoin.php?lang=$1&%{QUERY_STRING} [L,QSA]
+RewriteRule ^((?!en)[a-z]*)/comprar-e-vender-bitcoins\.php$ buy-and-sell-bitcoin.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^fee-schedule\.php$ fee-schedule.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/tarifas-y-comisiones\.php$ fee-schedule.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/комиссионные-сборы\.php$ fee-schedule.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/手续费\.php$ fee-schedule.php?lang=$1&%{QUERY_STRING} [L,QSA]
+RewriteRule ^((?!en)[a-z]*)/taxas-e-comissoes\.php$ fee-schedule.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^about\.php$ about.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/nosotros\.php$ about.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/об\.php$ about.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/对于\.php$ about.php?lang=$1&%{QUERY_STRING} [L,QSA]
+RewriteRule ^((?!en)[a-z]*)/sobre-nos\.php$ about.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^what-are-bitcoins\.php$ what-are-bitcoins.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/que-son-los-bitcoins\.php$ what-are-bitcoins.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/что-такое-Биткойн\.php$ what-are-bitcoins.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/什么是比特币\.php$ what-are-bitcoins.php?lang=$1&%{QUERY_STRING} [L,QSA]
+RewriteRule ^((?!en)[a-z]*)/o-que-sao-bitcoins\.php$ what-are-bitcoins.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^how-bitcoin-works\.php$ how-bitcoin-works.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/como-funciona-bitcoin\.php$ how-bitcoin-works.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/как-работает-Биткойн\.php$ how-bitcoin-works.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/比特币的工作原理\.php$ how-bitcoin-works.php?lang=$1&%{QUERY_STRING} [L,QSA]
+RewriteRule ^((?!en)[a-z]*)/como-funciona-o-bitcoin\.php$ how-bitcoin-works.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^reset_2fa\.php$ reset_2fa.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/reiniciar_2fa\.php$ reset_2fa.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/сброс-2fa\.php$ reset_2fa.php?lang=$1&%{QUERY_STRING} [L,QSA]
@@ -49,8 +57,10 @@ RewriteRule ^press-releases\.php$ press-releases.php?lang=en&%{QUERY_STRING} [L,
 RewriteRule ^((?!en)[a-z]*)/comunicados-de-prensa\.php$ press-releases.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/новости\.php$ press-releases.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/消息\.php$ press-releases.php?lang=$1&%{QUERY_STRING} [L,QSA]
+RewriteRule ^((?!en)[a-z]*)/comunicados-de-imprensa\.php$ press-releases.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^terms\.php$ terms.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/terminos\.php$ terms.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/условия\.php$ terms.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/条件\.php$ terms.php?lang=$1&%{QUERY_STRING} [L,QSA]
+RewriteRule ^((?!en)[a-z]*)/termos\.php$ terms.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/sitemap\.xml$ sitemap.xml [L,QSA]
