Typo in htacces.

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -23,7 +23,7 @@ RewriteRule ^our-security\.php$ our-security.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/nuestra-seguridad\.php$ our-security.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/наша-безопасность\.php$ our-security.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/我们的安全\.php$ our-security.php?lang=$1&%{QUERY_STRING} [L,QSA]
-RewriteRule ^((?!en)[a-z]*)/nossa-seguranca.php\.php$ our-security.php?lang=$1&%{QUERY_STRING} [L,QSA]
+RewriteRule ^((?!en)[a-z]*)/nossa-seguranca\.php$ our-security.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^buy-and-sell-bitcoin\.php$ buy-and-sell-bitcoin.php?lang=en&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/comprar-y-vender-bitcoins\.php$ buy-and-sell-bitcoin.php?lang=$1&%{QUERY_STRING} [L,QSA]
 RewriteRule ^((?!en)[a-z]*)/как-зарегистрироваться\.php$ buy-and-sell-bitcoin.php?lang=$1&%{QUERY_STRING} [L,QSA]
